--- a/projects/Exasol.html
+++ b/projects/Exasol.html
@@ -60,103 +60,69 @@
 
         <!-- ======= Portfolio Details ======= -->
         <section id="article" class="article">
-            <div class="container" data-aos="fade-up">
-
-                <div class="section-title">
-                    <h2>Exasol - CRM Analytics Automation Solution</h2>
-                    <br>
-                    <div class="row" style="text-align: center;">
-                        <div class="col-lg-10" style="margin: auto;">
-                            <a href="../index.html">
-                                <h3 style="text-align: left;">Rijul_Sahu</h3>
-                            </a>
-                            <p style="font-style: italic; text-align: left;">October, 2019</p><br>
-                            <h4>
-                                <p style="text-align: left;">Developed an automated analytics solution using Exasol's
-                                    high-performance, in-memory MPP database to deliver CRM insights and calculate
-                                    consumer retention rates across brands, regions, and time periods.</p>
-                            </h4>
-                            <h4>
-                                <p style="text-align: left;">Exasol is a high-performance, in-memory
-                                    massively parallel processing (MPP) database specifically designed
-                                    for analytics.</p>
-                            </h4><br>
-                            <img src="../assets/img/exasol.png" alt="" width="50%" height="50%"><br>
-                            <br>
-                            <h4>
-                                <p style="text-align: left;">You can find more about
-                                    exasol here, <a href="https://www.exasol.com"
-                                        target="_blank">https://www.exasol.com</a></p>
-                            </h4><br>
-                            <h1 style="text-align: left;">Description</h1>
-                            <h4>
-                                <p style="text-align: left;">The Digital Brand Commerce, Analytics & Operations team
-                                    required accurate and repeatable CRM metrics to measure consumer retention across
-                                    multiple channels and time granularities (month, quarter, half‑year, year). The
-                                    legacy process relied on a mix of SQL scripts and Excel‑based aggregations, causing
-                                    inefficiency and inconsistent reporting. The new solution streamlined this analysis
-                                    within Exasol through complete automation.</p>
-                            </h4>
-                            <br>
-                            <h1 style="text-align: left;">Key Challenges</h1>
-                            <ul style="text-align: left;">
-                                <li>
-                                    <h4>Multiple disparate SQL scripts and spreadsheets needed for a single report.</h4>
-                                </li>
-                                <li>
-                                    <h4>High manual effort to change filters (time period, region, brand).</h4>
-                                </li>
-                                <li>
-                                    <h4>Heavy data files consuming large server space.</h4>
-                                </li>
-                                <li>
-                                    <h4>Complex calculations increasing process time and error risk.</h4>
-                                </li>
-                            </ul>
-                            <br>
-                            <h1 style="text-align: left;">Solution</h1>
-                            <h4>
-                                <p style="text-align: left;">To eliminate manual tasks and optimize performance, I
-                                    designed and deployed automated <strong>Lua scripts</strong> within Exasol. The
-                                    scripts:</p>
-                            </h4>
-                            <ul style="text-align: left;">
-                                <li>
-                                    <h4>Process consumer data from multiple channels and sources.</h4>
-                                </li>
-                                <li>
-                                    <h4>Apply data quality rules and perform aggregation by business logic.</h4>
-                                </li>
-                                <li>
-                                    <h4>Segment consumers into groups based on defined parameters.</h4>
-                                </li>
-                                <li>
-                                    <h4>Calculate key CRM metrics, including retention rates, in real time.</h4>
-                                </li>
-                            </ul>
-                            <h4>
-                                <p style="text-align: left;">Reports are now generated in a few clicks by simply
-                                    entering the desired filters-significantly improving ease of use and execution
-                                    speed.</p>
-                            </h4>
-                            <br>
-                            <h1 style="text-align: left;">Key Benefits</h1>
-
-                            <ul style="text-align: left;">
-                                <li>
-                                    <h4>Reduced turnaround time from <strong>45 minutes to 4 minutes</strong></h4>
-                                </li>
-                                <li>
-                                    <h4>Decreased manual intervention by <strong>up to 98%</strong></h4>
-                                </li>
-                                <li>
-                                    <h4>Optimized process and resource utilization</h4>
-                                </li>
-                                <li>
-                                    <h4>Lowered ongoing operations cost through full automation</h4>
-                                </li>
-                            </ul>
-                        </div>
+            <div class="container case-container" data-aos="fade-up">
+                <nav class="case-breadcrumb" aria-label="Breadcrumb"><a href="../index.html#portfolio" rel="noopener">← Back to Projects</a></nav>
+                <div class="case-study-header" data-aos="zoom-in" data-aos-delay="50" aria-labelledby="caseTitleExasol">
+                    <h1 id="caseTitleExasol" class="case-study-title">Exasol – CRM Analytics Automation Solution</h1>
+                    <p class="case-meta">Oct 2019 • High‑Performance In‑Memory Analytics</p>
+                    <p class="case-tagline">Automated CRM retention metric computation leveraging Exasol’s in‑memory MPP engine—eliminating spreadsheet bottlenecks and enabling fast multi‑dimension filtering across brands, regions & time.</p>
+                </div>
+                <div class="case-metrics" data-aos="fade-up" data-aos-delay="70">
+                    <div class="metric-pill"><strong>45→4 min</strong> report turnaround</div>
+                    <div class="metric-pill"><strong>98%</strong> manual effort reduction</div>
+                    <div class="metric-pill"><strong>Real-time</strong> retention metrics</div>
+                    <div class="metric-pill"><strong>Full</strong> automation</div>
+                </div>
+                <div class="case-body">
+                    <div class="panel accent case-section" id="intro" data-aos="fade-up" data-aos-delay="90">
+                        <h2>Overview</h2>
+                        <p>Developed an automated analytics solution using Exasol's high-performance, in-memory MPP database to deliver CRM insights and calculate consumer retention rates across brands, regions, and time periods. Exasol is a high-performance, in-memory massively parallel processing (MPP) database specifically designed for analytics. More info: <a href="https://www.exasol.com" target="_blank" rel="noopener">https://www.exasol.com</a>.</p>
+                    </div>
+                    <div class="panel case-section" id="description" data-aos="fade-up" data-aos-delay="130">
+                        <h2>Description</h2>
+                        <p>The Digital Brand Commerce, Analytics &amp; Operations team required accurate and repeatable CRM metrics to measure consumer retention across multiple channels and time granularities (month, quarter, half‑year, year). The legacy process relied on a mix of SQL scripts and Excel‑based aggregations, causing inefficiency and inconsistent reporting. The new solution streamlined this analysis within Exasol through complete automation.</p>
+                    </div>
+                    <div class="panel case-section" id="challenges" data-aos="fade-up" data-aos-delay="170">
+                        <h2>Key Challenges</h2>
+                        <ul class="callout-list challenge">
+                            <li>Multiple disparate SQL scripts and spreadsheets needed for a single report.</li>
+                            <li>High manual effort to change filters (time period, region, brand).</li>
+                            <li>Heavy data files consuming large server space.</li>
+                            <li>Complex calculations increasing process time and error risk.</li>
+                        </ul>
+                    </div>
+                    <div class="panel case-section" id="solution" data-aos="fade-up" data-aos-delay="210">
+                        <h2>Solution</h2>
+                        <p>To eliminate manual tasks and optimize performance, I designed and deployed automated <strong>Lua scripts</strong> within Exasol. The scripts:</p>
+                        <ul class="callout-list">
+                            <li>Process consumer data from multiple channels and sources.</li>
+                            <li>Apply data quality rules and perform aggregation by business logic.</li>
+                            <li>Segment consumers into groups based on defined parameters.</li>
+                            <li>Calculate key CRM metrics, including retention rates, in real time.</li>
+                        </ul>
+                        <p>Reports are now generated in a few clicks by simply entering the desired filters—significantly improving ease of use and execution speed.</p>
+                    </div>
+                    <div class="panel case-section" id="benefits" data-aos="fade-up" data-aos-delay="250">
+                        <h2>Key Benefits</h2>
+                        <ul class="callout-list benefit">
+                            <li>Reduced turnaround time from <strong>45 minutes to 4 minutes</strong>.</li>
+                            <li>Decreased manual intervention by <strong>up to 98%</strong>.</li>
+                            <li>Optimized process and resource utilization.</li>
+                            <li>Lowered ongoing operations cost through full automation.</li>
+                        </ul>
+                    </div>
+                    <div class="panel case-section" id="techStack" data-aos="fade-up" data-aos-delay="270">
+                        <h2>Tech Stack</h2>
+                        <ul class="callout-list">
+                            <li>Exasol in‑memory MPP database</li>
+                            <li>Lua scripting for automation</li>
+                            <li>SQL aggregation & filtering</li>
+                            <li>Automated retention metric pipeline</li>
+                        </ul>
+                    </div>
+                    <div class="panel case-section" id="visual" data-aos="fade-up" data-aos-delay="290">
+                        <h3>Data Flow Visual</h3>
+                        <img src="../assets/img/exasol.png" alt="Exasol platform illustration" class="metrics-image" />
                     </div>
                 </div>
             </div>
