--- a/projects/Terraform.html
+++ b/projects/Terraform.html
@@ -60,105 +60,69 @@
 
         <!-- ======= Portfolio Details ======= -->
         <section id="article" class="article">
-            <div class="container" data-aos="fade-up">
-
-                <div class="section-title">
-                    <h2>Terraform Template for Deploying VPC, Subnets, EC2, RDS & More</h2>
-                    <br>
-                    <div class="row" style="text-align: center;">
-                        <div class="col-lg-10" style="margin: auto;">
-                            <a href="../index.html">
-                                <h3 style="text-align: left;">Rijul_Sahu</h3>
-                            </a>
-                            <p style="font-style: italic; text-align: left;">August, 2020</p><br>
-                            <h4>
-                                <p style="text-align: left;">Developed reusable Terraform templates to automate AWS
-                                    infrastructure deployment and enable a CI/CD workflow for cloud resource
-                                    provisioning. The solution standardized DevOps practices and reduced manual
-                                    deployment overhead across multiple teams.</p>
-                            </h4>
-                            <br>
-                            <img src="../assets/img/Terraform.png" alt="" width="50%" height="50%"><br>
-                            <br>
-                            <h4>
-                                <p style="text-align: left;">You can find source code here, <a
-                                        href="https://github.com/rijulsahu/vpc-2subnets-ec2-rds"
-                                        target="_blank">https://github.com/rijulsahu/vpc-2subnets-ec2-rds</a></p>
-                            </h4>
-                            <h1 style="text-align: left;">Description</h1>
-                            <h4>
-                                <p style="text-align: left; font-family: sans-serif;">
-                                    The client, a leading European multinational online food-delivery company
-                                    headquartered in Berlin, operated across 40+ countries with partnerships exceeding
-                                    500,000 restaurants. To support the deployment of their Market Mix Model (MMM)
-                                    analytics solution across multiple geographies, the DevOps team required a fully
-                                    automated infrastructure setup.
-                                    Their existing resource deployment process was manual, time-intensive, and lacked
-                                    consistency. The goal was to design a scalable Terraform-based CI/CD framework for
-                                    automated, error-free AWS resource provisioning.</p>
-                            </h4>
-                            <br>
-                            <h1 style="text-align: left;">Key Challenges</h1>
-                            <ul style="text-align: left;">
-                                <li>
-                                    <h4>Manual and time-consuming setup of AWS cloud resources</h4>
-                                </li>
-                                <li>
-                                    <h4>Heavy dependency on multiple external IT vendors</h4>
-                                </li>
-                                <li>
-                                    <h4>Absence of formal DevOps processes</h4>
-                                </li>
-                                <li>
-                                    <h4>Delays in meeting project delivery timelines</h4>
-                                </li>
-                            </ul>
-                            <br>
-                            <h1 style="text-align: left;">Solution</h1>
-                            <h4>
-                                <p style="text-align: left;">To streamline the infrastructure deployment workflow, I
-                                    designed and implemented an <strong>AWS Terraform template</strong> that:</p>
-                            </h4>
-                            <ul style="text-align: left;">
-                                <li>
-                                    <h4>Creates a <strong>VPC</strong> with two <strong>subnets</strong> for network
-                                        segmentation</h4>
-                                </li>
-                                <li>
-                                    <h4>Launches <strong>EC2 instances</strong> to host applications and services</h4>
-                                </li>
-                                <li>
-                                    <h4>Provisions <strong>RDS instances</strong> for persistent data storage</h4>
-                                </li>
-                                <li>
-                                    <h4>Integrates seamlessly within the CI/CD pipeline for automated provisioning</h4>
-                                </li>
-                            </ul>
-                            <h4>
-                                <p style="text-align: left;">This infrastructure framework allowed multiple teams to
-                                    deploy and manage resources independently with consistent configurations. The IT
-                                    team later used this environment to host an interactive web interface running the
-                                    MMM model on the newly created EC2 instances.</p>
-                            </h4>
-                            <br>
-                            <h1 style="text-align: left;">Key Benefits</h1>
-                            <ul style="text-align: left;">
-                                <li>
-                                    <h4>Established an internal knowledge base, removing vendor dependency</h4>
-                                </li>
-                                <li>
-                                    <h4>Enabled a full <strong>CI/CD-based DevOps</strong> implementation</h4>
-                                </li>
-                                <li>
-                                    <h4>Eliminated manual intervention, improving delivery accuracy and speed</h4>
-                                </li>
-                                <li>
-                                    <h4>Reduced deployment time while ensuring consistent, reproducible infrastructure
-                                        setups</h4>
-                                </li>
-                            </ul>
-
-                        </div>
+            <div class="container case-container" data-aos="fade-up">
+                <nav class="case-breadcrumb" aria-label="Breadcrumb"><a href="../index.html#portfolio" rel="noopener">← Back to Projects</a></nav>
+                <div class="case-study-header" data-aos="zoom-in" data-aos-delay="50" aria-labelledby="caseTitleTerraform">
+                    <h1 id="caseTitleTerraform" class="case-study-title">Terraform Template – VPC, Subnets, EC2, RDS &amp; More</h1>
+                    <p class="case-meta">Aug 2020 • Automated AWS Infrastructure Provisioning</p>
+                    <p class="case-tagline">Reusable Terraform modules powering CI/CD-based infrastructure deployments—standardizing DevOps practice & reducing manual overhead across teams.</p>
+                </div>
+                <div class="case-metrics" data-aos="fade-up" data-aos-delay="70">
+                    <div class="metric-pill"><strong>CI/CD</strong> enabled deployments</div>
+                    <div class="metric-pill"><strong>Zero</strong> vendor dependency</div>
+                    <div class="metric-pill"><strong>Eliminated</strong> manual steps</div>
+                    <div class="metric-pill"><strong>Reusable</strong> modules</div>
+                </div>
+                <div class="case-body">
+                    <div class="panel accent case-section" id="overview" data-aos="fade-up" data-aos-delay="90">
+                        <h2>Overview</h2>
+                        <p>Developed reusable Terraform templates to automate AWS infrastructure deployment and enable a CI/CD workflow for cloud resource provisioning. The solution standardized DevOps practices and reduced manual deployment overhead across multiple teams. Source code: <a href="https://github.com/rijulsahu/vpc-2subnets-ec2-rds" target="_blank" rel="noopener">GitHub Repository</a>.</p>
+                    </div>
+                    <div class="panel case-section" id="description" data-aos="fade-up" data-aos-delay="130">
+                        <h2>Description</h2>
+                        <p>The client, a leading European multinational online food-delivery company headquartered in Berlin, operated across 40+ countries with partnerships exceeding 500,000 restaurants. To support deployment of their Market Mix Model (MMM) analytics solution across multiple geographies, the DevOps team required a fully automated infrastructure setup. Existing resource deployment was manual, time‑intensive, and inconsistent. Goal: design a scalable Terraform-based CI/CD framework for automated, error-free AWS provisioning.</p>
+                    </div>
+                    <div class="panel case-section" id="challenges" data-aos="fade-up" data-aos-delay="170">
+                        <h2>Key Challenges</h2>
+                        <ul class="callout-list challenge">
+                            <li>Manual and time-consuming setup of AWS cloud resources.</li>
+                            <li>Heavy dependency on multiple external IT vendors.</li>
+                            <li>Absence of formal DevOps processes.</li>
+                            <li>Delays in meeting project delivery timelines.</li>
+                        </ul>
+                    </div>
+                    <div class="panel case-section" id="solution" data-aos="fade-up" data-aos-delay="210">
+                        <h2>Solution</h2>
+                        <p>To streamline infrastructure deployment, I designed and implemented an <strong>AWS Terraform template</strong> that:</p>
+                        <ul class="callout-list">
+                            <li>Creates a <strong>VPC</strong> with two <strong>subnets</strong> for network segmentation.</li>
+                            <li>Launches <strong>EC2 instances</strong> to host applications and services.</li>
+                            <li>Provisions <strong>RDS instances</strong> for persistent data storage.</li>
+                            <li>Integrates seamlessly within the CI/CD pipeline for automated provisioning.</li>
+                        </ul>
+                        <p>This framework enabled multiple teams to deploy and manage resources independently with consistent configurations. The IT team later hosted an interactive web interface running the MMM model on the newly created EC2 instances.</p>
+                    </div>
+                    <div class="panel case-section" id="benefits" data-aos="fade-up" data-aos-delay="250">
+                        <h2>Key Benefits</h2>
+                        <ul class="callout-list benefit">
+                            <li>Established an internal knowledge base—removing vendor dependency.</li>
+                            <li>Enabled full <strong>CI/CD-based DevOps</strong> implementation.</li>
+                            <li>Eliminated manual intervention, improving delivery accuracy & speed.</li>
+                            <li>Reduced deployment time with consistent, reproducible infrastructure setups.</li>
+                        </ul>
+                    </div>
+                    <div class="panel case-section" id="techStack" data-aos="fade-up" data-aos-delay="270">
+                        <h2>Tech Stack</h2>
+                        <ul class="callout-list">
+                            <li>Terraform modules</li>
+                            <li>AWS (VPC, Subnets, EC2, RDS)</li>
+                            <li>CI/CD pipeline integration</li>
+                            <li>Market Mix Model hosting environment</li>
+                        </ul>
+                    </div>
+                    <div class="panel case-section" id="visual" data-aos="fade-up" data-aos-delay="290">
+                        <h3>Architecture Visual</h3>
+                        <img src="../assets/img/Terraform.png" alt="Terraform AWS architecture illustration" class="metrics-image" />
                     </div>
                 </div>
             </div>
