--- a/projects/Topic_Modeling.html
+++ b/projects/Topic_Modeling.html
@@ -60,96 +60,64 @@
 
         <!-- ======= Portfolio Details ======= -->
         <section id="article" class="article">
-            <div class="container" data-aos="fade-up">
-
-                <div class="section-title">
-                    <h2>Topic Modelling and Text Classification Machine Learning Solution</h2>
-                    <br>
-                    <div class="row" style="text-align: center;">
-                        <div class="col-lg-10" style="margin: auto;">
-                            <a href="../index.html">
-                                <h3 style="text-align: left;">Rijul_Sahu</h3>
-                            </a>
-                            <p style="font-style: italic; text-align: left;">July, 2019</p><br>
-                            <h4>
-                                <p style="text-align: left;">Developed a scalable machine learning solution for
-                                    automated topic modelling and text classification on large volumes of customer chat
-                                    data. The solution enabled efficient extraction of actionable insights for
-                                    predictive and descriptive analytics with minimal human intervention.</p>
-                            </h4><br>
-                            <img src="../assets/img/topic_modelling.png" alt="" width="50%" height="50%"><br>
-                            <br>
-                            <h1 style="text-align: left;">Description</h1>
-                            <h4>
-                                <p style="text-align: left;">The client required a system capable of automatically
-                                    categorizing incoming customer chats into predefined topics. Using machine learning
-                                    algorithms, the system first identified key themes within historical data and then
-                                    classified new chat messages into appropriate topics for faster issue resolution and
-                                    better customer understanding.</p>
-                            </h4>
-                            <br>
-                            <h1 style="text-align: left;">Key Challenges</h1>
-                            <ul style="text-align: left;">
-                                <li>
-                                    <h4>Extracting meaningful insights from large amounts of unstructured text data</h4>
-                                </li>
-                                <li>
-                                    <h4>Executing complex classification algorithms at scale using traditional systems
-                                    </h4>
-                                </li>
-                                <li>
-                                    <h4>Performance limitations due to slow RAM and restricted server storage</h4>
-                                </li>
-                            </ul>
-                            <br>
-                            <h1 style="text-align: left;">Solution</h1>
-                            <h3>
-                                <p style="text-align: left;">To enable high-speed processing and scalability, I designed
-                                    and implemented a <strong>PySpark-based</strong> solution on a big data platform.
-                                </p>
-                            </h3>
-                            <br>
-                            <h3 style="text-align: left;">The automated pipeline performs the following steps:</h3>
-                            <ul style="text-align: left;">
-                                <li>
-                                    <h4>Reads and cleans raw chat data through text preprocessing routines</h4>
-                                </li>
-                                <li>
-                                    <h4>Applies topic modelling algorithms to identify patterns and key discussion areas
-                                    </h4>
-                                </li>
-                                <li>
-                                    <h4>Uses a classification model to automatically bucket unseen chats into relevant
-                                        topics</h4>
-                                </li>
-                            </ul>
-                            <h4>
-                                <p style="text-align: left;">By leveraging PySpark’s distributed processing
-                                    capabilities, the entire pipeline executes within seconds even on large datasets.
-                                    The final implementation achieved <strong>over 85% classification accuracy</strong>.
-                                </p>
-                            </h4>
-                            <br>
-                            <h1 style="text-align: left;">Key Benefits</h1>
-                            <ul style="text-align: left;">
-                                <li>
-                                    <h4>Reduced total processing time to approximately <strong>3 minutes</strong></h4>
-                                </li>
-                                <li>
-                                    <h4>Delivered accurate and automated topic categorization with <strong>98% less
-                                            manual intervention</strong></h4>
-                                </li>
-                                <li>
-                                    <h4>Enabled detailed insights on topics, sentiment, and resolution focus areas</h4>
-                                </li>
-                                <li>
-                                    <h4>Optimized computing efficiency by running in distributed mode</h4>
-                                </li>
-                                <li>
-                                    <h4>Minimized overall operational cost through full automation</h4>
-                                </li>
-                            </ul>
-                        </div>
+            <div class="container case-container" data-aos="fade-up">
+                <nav class="case-breadcrumb" aria-label="Breadcrumb"><a href="../index.html#portfolio" rel="noopener">← Back to Projects</a></nav>
+                <div class="case-study-header" data-aos="zoom-in" data-aos-delay="50" aria-labelledby="caseTitleTopic">
+                    <h1 id="caseTitleTopic" class="case-study-title">Topic Modelling &amp; Text Classification Solution</h1>
+                    <p class="case-meta">Jul 2019 • Scalable ML on Chat Data</p>
+                    <p class="case-tagline">Automated topic modelling & classification pipeline extracting actionable insight from large volumes of customer chat data—enabling fast analytics with minimal intervention.</p>
+                </div>
+                <div class="case-metrics" data-aos="fade-up" data-aos-delay="70">
+                    <div class="metric-pill"><strong>85%</strong> classification accuracy</div>
+                    <div class="metric-pill"><strong>3 min</strong> processing time</div>
+                    <div class="metric-pill"><strong>98%</strong> less manual effort</div>
+                    <div class="metric-pill"><strong>Distributed</strong> PySpark pipeline</div>
+                </div>
+                <div class="case-body">
+                    <div class="panel accent case-section" id="overview" data-aos="fade-up" data-aos-delay="90">
+                        <h2>Description</h2>
+                        <p>The client required a system capable of automatically categorizing incoming customer chats into predefined topics. Using machine learning algorithms, the system first identified key themes within historical data and then classified new chat messages into appropriate topics for faster issue resolution and better customer understanding.</p>
+                    </div>
+                    <div class="panel case-section" id="challenges" data-aos="fade-up" data-aos-delay="130">
+                        <h2>Key Challenges</h2>
+                        <ul class="callout-list challenge">
+                            <li>Extracting meaningful insights from large amounts of unstructured text data.</li>
+                            <li>Executing complex classification algorithms at scale using traditional systems.</li>
+                            <li>Performance limitations due to slow RAM and restricted server storage.</li>
+                        </ul>
+                    </div>
+                    <div class="panel case-section" id="solution" data-aos="fade-up" data-aos-delay="170">
+                        <h2>Solution</h2>
+                        <p>To enable high-speed processing and scalability, I designed and implemented a <strong>PySpark-based</strong> solution on a big data platform. The automated pipeline performs the following steps:</p>
+                        <ul class="callout-list">
+                            <li>Reads and cleans raw chat data through text preprocessing routines.</li>
+                            <li>Applies topic modelling algorithms to identify patterns and key discussion areas.</li>
+                            <li>Uses a classification model to automatically bucket unseen chats into relevant topics.</li>
+                        </ul>
+                        <p>Leveraging PySpark’s distributed processing capabilities, the pipeline executes within seconds even on large datasets. Final implementation achieved <strong>over 85% classification accuracy</strong>.</p>
+                    </div>
+                    <div class="panel case-section" id="benefits" data-aos="fade-up" data-aos-delay="210">
+                        <h2>Key Benefits</h2>
+                        <ul class="callout-list benefit">
+                            <li>Reduced total processing time to approximately <strong>3 minutes</strong>.</li>
+                            <li>Delivered accurate automated topic categorization with <strong>98% less manual intervention</strong>.</li>
+                            <li>Enabled detailed insights on topics, sentiment, and resolution focus areas.</li>
+                            <li>Optimized computing efficiency via distributed execution.</li>
+                            <li>Minimized overall operational cost through full automation.</li>
+                        </ul>
+                    </div>
+                    <div class="panel case-section" id="techStack" data-aos="fade-up" data-aos-delay="230">
+                        <h2>Tech Stack</h2>
+                        <ul class="callout-list">
+                            <li>PySpark distributed processing</li>
+                            <li>Topic modelling algorithms</li>
+                            <li>Text preprocessing routines</li>
+                            <li>Classification model</li>
+                        </ul>
+                    </div>
+                    <div class="panel case-section" id="visual" data-aos="fade-up" data-aos-delay="250">
+                        <h3>Pipeline Visual</h3>
+                        <img src="../assets/img/topic_modelling.png" alt="Topic modelling & classification illustration" class="metrics-image" />
                     </div>
                 </div>
             </div>
