--- a/projects/Hadoop.html
+++ b/projects/Hadoop.html
@@ -60,133 +60,79 @@
 
         <!-- ======= Portfolio Details ======= -->
         <section id="article" class="article">
-            <div class="container" data-aos="fade-up">
-
-                <div class="section-title">
-                    <h2>Big Data Analytics with Hadoop</h2>
-                    <br>
-                    <div class="row" style="text-align: center;">
-                        <div class="col-lg-10" style="margin: auto;">
-                            <a href="../index.html">
-                                <h3 style="text-align: left;">Rijul_Sahu</h3>
-                            </a>
-                            <p style="font-style: italic; text-align: left;">November, 2018</p><br>
-                            <h3>
-                                <p style="text-align: left;">Competitor Product Change Dashboards.</p>
-                            </h3>
-                            <h4>
-                                <p style="text-align: left;">Implemented competitor product change dashboards using
-                                    Hadoop-based big data solutions for a leading UK-based electronic components
-                                    manufacturer and distributor operating across 32 countries.
-                                    The solution addressed challenges in managing massive monthly
-                                    data volumes (6+ billion records), delivering actionable competitive
-                                    intelligence for pricing and inventory strategies at a global scale.</p>
-                            </h4>
-                            <br>
-                            <img src="../assets/img/bigdata_analytics.png" alt="" width="50%" height="50%"><br>
-                            <br>
-                            <h1 style="text-align: left;">Description</h1>
-                            <h4>
-                                <p style="text-align: left; font-family: sans-serif;">The client sought to efficiently
-                                    analyze competitors
-                                    pricing trends to support new and existing product lines.</p>
-                            </h4>
-                            <h4>
-                                <p style="text-align: left; font-family: sans-serif;">They faced:</p>
-                            </h4>
-                            <ul style="text-align: left;">
-                                <li>
-                                    <h4>Large-scale data processing challenges due to high data volume, velocity, and
-                                        variety.</h4>
-                                </li>
-                                <li>
-                                    <h4>Manual, time-intensive data handling.</h4>
-                                </li>
-                                <li>
-                                    <h4>Limitations in their existing BI architecture, which hindered timely and
-                                        holistic reporting on global competitor KPIs (price changes, inventory, trends,
-                                        and matched articles).</h4>
-                                </li>
-                            </ul>
-                            <br>
-                            <h1 style="text-align: left;">Key Challenges</h1>
-                            <ul style="text-align: left;">
-                                <li>
-                                    <h4>Manual and slow data processing.</h4>
-                                </li>
-                                <li>
-                                    <h4>Difficulty in executing competitive analysis with massive, diverse data sets.
-                                    </h4>
-                                </li>
-                                <li>
-                                    <h4>Inability to quickly analyze historical trends involving price and product
-                                        category changes.</h4>
-                                </li>
-                                <li>
-                                    <h4>Complications in meeting critical deadlines (ETAs).</h4>
-                                </li>
-                            </ul>
-                            <br>
-                            <h1 style="text-align: left;">Solution Highlights</h1>
-                            <ul style="text-align: left;">
-                                <li>
-                                    <h4>Designed and deployed a 6-node Hadoop cluster (20 cores, 150GB RAM, 2TB storage)
-                                        for scalable data ingestion and processing.</h4>
-                                </li>
-                                <li>
-                                    <h4>Transitioned data storage to optimized Hive tables in row-columnar format,
-                                        enabling efficient retrieval and analysis.</h4>
-                                </li>
-                                <li>
-                                    <h4>Developed business logic and ETL workflows using Apache Pig to integrate and
-                                        automate data processing across multiple systems.</h4>
-                                </li>
-                                <li>
-                                    <h4>Automated end-to-end workflows, from raw data extraction through to interactive
-                                        reporting.</h4>
-                                </li>
-                                <li>
-                                    <h4>Collaborated with BI teams to implement Tableau dashboards driven by real-time
-                                        Hive-aggregated datasets, offering actionable, ad-hoc insights.</h4>
-                                </li>
-                            </ul>
-                            <br>
-                            <h1 style="text-align: left;">Results & Impact</h1>
-                            <ul style="text-align: left;">
-                                <li>
-                                    <h4>Reduced dashboard and data processing turnaround time by 83%.</h4>
-                                </li>
-                                <li>
-                                    <h4>Deployed a scalable Pricing Data Warehouse managing 12+ million inventory items
-                                        and 43 competitors globally.</h4>
-                                </li>
-                                <li>
-                                    <h4>Enabled analysis of 6 months of competitor data (~6 billion records) at an
-                                        inventory level - previously unmanageable with traditional RDBMS.</h4>
-                                </li>
-                                <li>
-                                    <h4>Decreased report generation lead time from 3 weeks to just 1 day.</h4>
-                                </li>
-                                <li>
-                                    <h4>Batch processing now supports all global markets (including DE, FR, GB, IT, JP,
-                                        CN) simultaneously.</h4>
-                                </li>
-                                <li>
-                                    <h4>Automated workflows saved approximately 3 weeks of manual effort monthly.</h4>
-                                </li>
-                                <li>
-                                    <h4>Improved process efficiency by 99% and eliminated dependence on manual file
-                                        processing.</h4>
-                                </li>
-                                <li>
-                                    <h4>Achieved $150K annual savings on data processing, storage, and analytics.</h4>
-                                </li>
-                                <li>
-                                    <h4>Freed up 2 FTEs [full time employees] through automation.</h4>
-                                </li>
-                            </ul>
-
-                        </div>
+            <div class="container case-container" data-aos="fade-up">
+                <nav class="case-breadcrumb" aria-label="Breadcrumb"><a href="../index.html#portfolio" rel="noopener">← Back to Projects</a></nav>
+                <div class="case-study-header" data-aos="zoom-in" data-aos-delay="50" aria-labelledby="caseTitleHadoop">
+                    <h1 id="caseTitleHadoop" class="case-study-title">Big Data Analytics with Hadoop</h1>
+                    <p class="case-meta">Nov 2018 • Competitor Product Change Dashboards</p>
+                    <p class="case-tagline">Implemented global competitor product change dashboards processing 6B+ monthly records—powering pricing & inventory intelligence across 32 countries.</p>
+                </div>
+                <div class="case-metrics" data-aos="fade-up" data-aos-delay="70">
+                    <div class="metric-pill"><strong>6B+</strong> monthly records</div>
+                    <div class="metric-pill"><strong>83%</strong> turnaround reduction</div>
+                    <div class="metric-pill"><strong>$150K</strong> annual savings</div>
+                    <div class="metric-pill"><strong>99%</strong> efficiency gain</div>
+                </div>
+                <div class="case-body">
+                    <div class="panel accent case-section" id="overview" data-aos="fade-up" data-aos-delay="90">
+                        <h2>Overview</h2>
+                        <p>Implemented competitor product change dashboards using Hadoop-based big data solutions for a leading UK-based electronic components manufacturer and distributor operating across 32 countries. The solution addressed challenges in managing massive monthly data volumes (6+ billion records), delivering actionable competitive intelligence for pricing and inventory strategies at a global scale.</p>
+                    </div>
+                    <div class="panel case-section" id="description" data-aos="fade-up" data-aos-delay="130">
+                        <h2>Description</h2>
+                        <p>The client sought to efficiently analyze competitors pricing trends to support new and existing product lines. They faced:</p>
+                        <ul class="callout-list challenge">
+                            <li>Large-scale data processing challenges due to high data volume, velocity, and variety.</li>
+                            <li>Manual, time-intensive data handling.</li>
+                            <li>Limitations in existing BI architecture hindering timely, holistic reporting on global competitor KPIs (price changes, inventory, trends, matched articles).</li>
+                        </ul>
+                    </div>
+                    <div class="panel case-section" id="keyChallenges" data-aos="fade-up" data-aos-delay="170">
+                        <h2>Key Challenges</h2>
+                        <ul class="callout-list challenge">
+                            <li>Manual and slow data processing.</li>
+                            <li>Difficulty executing competitive analysis with massive, diverse data sets.</li>
+                            <li>Inability to quickly analyze historical trends involving price and product category changes.</li>
+                            <li>Complications in meeting critical deadlines (ETAs).</li>
+                        </ul>
+                    </div>
+                    <div class="panel case-section" id="solution" data-aos="fade-up" data-aos-delay="210">
+                        <h2>Solution Highlights</h2>
+                        <ul class="callout-list">
+                            <li>Designed and deployed a 6-node Hadoop cluster (20 cores, 150GB RAM, 2TB storage) for scalable ingestion & processing.</li>
+                            <li>Transitioned storage to optimized Hive tables (row-columnar) for efficient retrieval.</li>
+                            <li>Developed ETL logic using Apache Pig automating integration across systems.</li>
+                            <li>Automated end-to-end workflows from raw extraction to interactive reporting.</li>
+                            <li>Collaborated with BI teams to implement Tableau dashboards backed by real-time Hive aggregates.</li>
+                        </ul>
+                    </div>
+                    <div class="panel case-section" id="impact" data-aos="fade-up" data-aos-delay="250">
+                        <h2>Results &amp; Impact</h2>
+                        <ul class="callout-list benefit">
+                            <li>Reduced dashboard & processing turnaround time by 83%.</li>
+                            <li>Deployed a scalable Pricing Data Warehouse managing 12M+ inventory items & 43 competitors globally.</li>
+                            <li>Enabled analysis of six months (~6B records) at inventory level—previously unmanageable.</li>
+                            <li>Decreased report lead time from 3 weeks to 1 day.</li>
+                            <li>Batch processing supports all global markets (DE, FR, GB, IT, JP, CN) simultaneously.</li>
+                            <li>Automated workflows saved ~3 weeks manual effort monthly.</li>
+                            <li>Improved process efficiency by 99%, eliminating manual file handling.</li>
+                            <li>Achieved $150K annual savings on processing, storage & analytics.</li>
+                            <li>Freed 2 FTEs via automation.</li>
+                        </ul>
+                    </div>
+                    <div class="panel case-section" id="techStack" data-aos="fade-up" data-aos-delay="270">
+                        <h2>Tech Stack</h2>
+                        <ul class="callout-list">
+                            <li>Hadoop cluster (6-node)</li>
+                            <li>Hive (row-columnar tables)</li>
+                            <li>Apache Pig ETL workflows</li>
+                            <li>Tableau dashboards</li>
+                            <li>Automated batch orchestration</li>
+                        </ul>
+                    </div>
+                    <div class="panel case-section" id="visual" data-aos="fade-up" data-aos-delay="290">
+                        <h3>Platform Visual</h3>
+                        <img src="../assets/img/bigdata_analytics.png" alt="Hadoop big data analytics illustration" class="metrics-image" />
                     </div>
                 </div>
             </div>
